--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <!-- rodapé -->
     <footer>
-        <p>&copy; Site criado por <a href="https:/github.com/RodrigoPini" target="_blank" rel="external">Rodrigo Pini</a></p>
+        <p>&copy; Site criado por <a href="https://github.com/RodrigoPini" target="_blank" rel="external">Rodrigo Pini</a></p>
     </footer>
 
 </body>
